2000-10-02  Pavel Roskin  <proski@gnu.org>

	* acspecific.m4 (AC_PROG_LEX): Use AC_DEFUN_ONCE.
	(AC_DECL_YYTEXT): Don't use AC_REQUIRE because autoupdate
	would place it into configure.in but it's not allowed
	outside AC_DEFUN.

2000-10-02  Pavel Roskin  <proski@gnu.org>

	* tests/Makefile.am: Macros defined by AC_DEFUN_ONCE should
	go to macros.m4 for testing.

2000-09-28  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (AC_SHELL_UNSET): Don't rely on variable
	assignments changing $?.

2000-09-28  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_OUTPUT_FILES): Fixed exit status.
	(_AC_OUTPUT_HEADERS): Exit if the header template is missing.

2000-09-28  Pavel Roskin  <proski@gnu.org>

	* acfunctions.m4: Formatting fixes.
	* acgeneral.m4: Likewise.
	* aclang.m4: Likewise.
	* acspecific.m4: Likewise.
	* libm4.m4: Likewise.

2000-09-27  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (AC_CHECK_PROG): Added protection against spaces
	in $PATH.
	* acspecific.m4 (AC_PROG_INSTALL): Likewise.

2000-09-27  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (AC_CHECK_LIB): only call AH_CHECK_LIB if
	ACTION-IF-TRUE is not given.
	(AH_CHECK_LIB): related comment changes.

2000-09-27  Pavel Roskin  <proski@gnu.org>

	* aclang.m4 (_AC_LANG_COMPILER_WORKS): Remove []dnl because it
	resulted in invalid shell code.

2000-09-27  Lars J. Aas  <larsa@sim.no>

	* autoconf.sh: Report full macro name for missing macros.

2000-09-27  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* autoheader.sh: Fix trap (EXIT) status.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* autoconf.sh: Change `exit' to `{ (exit 1); exit; }' after m4 and
	awk commands to ensure exit state is in a defined state.

2000-09-25  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* tests/semantics.m4 (AC_PROG_CPP with warning): Simplified.

2000-09-25  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): use
	_AC_INIT_PREPARE_ENVIRONMENT to make the shell running